repoze.who Changelog
====================

After 2.0a2 (unreleased)
-----------------------

- Fixed example call to ``repoze.who.config:make_middleware_with_config``
  (added missing ``global_config`` argument).  See
  http://bugs.repoze.org/issue114

2.0a2 (2010-03-25)
------------------

Bugs Fixed
~~~~~~~~~~

- Fixed failure to pass substution values in log message string formatting
  for ``repoze.who.api:API.challenge``.  Fix included adding tests for all
  logging done by the API object.  See http://bugs.repoze.org/issue122

Backward Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Adjusted logging level for some lower-level details from ``info``
  to ``debug``.


2.0a1 (2010-02-24)
------------------

Features
~~~~~~~~

- Restored the ability to create the middleware using the old ``classifier``
  argument.  That argument is now a deprecated-but-will-work-forever alias for
  ``request_classifier``.

- The ``auth_tkt`` plugin now implements the ``IAuthenticator`` interface,
  and should normally be used both as an ``IIdentifier`` and an
  ``IAuthenticator``.

- Factored out the API of the middleware object to make it useful from
  within the application.  Applications using ``repoze.who``` now fall into
  one of three catgeories:

  - "middleware-only" applications are configured with middleware, and
    use either ``REMOTE_USER`` or ``repoze.who.identity`` from the environment
    to determing the authenticated user.

  - "bare metal" applications use no ``repoze.who`` middleware at all:
    instead, they configure and an ``APIFactory`` object at startup, and
    use it to create an ``API`` object when needed on a per-request basis.

  - "hybrid" applications are configured with ``repoze.who`` middleware,
    but use a new library function to fetch the ``API`` object from the
    environ, e.g. to permit calling ``remember`` after a signup or successful
    login.

Bugs Fixed
~~~~~~~~~~

- Fix http://bugs.repoze.org/issue102: when no challengers existed,